--- a/content/soil.qmd
+++ b/content/soil.qmd
@@ -11,6 +11,7 @@ require(ggplot2)
 require(MASS)
 require(multcompView)
 require(car)
+require(ggsignif)
 ```
 
 ```{r}
@@ -269,6 +270,8 @@ soil.lm <- lm(mbc ~ depth_cat * material, data = soil)
 ```
 
 # Model assumption
+# Asumptions are not valid for simple linear regression
+# Residuals are not equally or independently distributed
 
 ```{r}
 par(mfrow = c(2, 2))
@@ -276,6 +279,7 @@ plot(soil.lm)
 ```
 
 # Log-transformation
+# Although outliers are present, log-transform of the response variable, mbc, appear to meet the #assumptions of simplae linear regression 
 
 ```{r}
 soil_log.lm <- lm(log(mbc) ~ depth_cat * material, data = soil)
@@ -322,13 +326,8 @@ soil_log2.aov <- aov(log(mbc) ~ material + depth_cat, data = soil)
 ```
 
 ```{r}
-soil_log3.aov <- aov(log(mbc) ~ material * depth_cat, data = soil)
+summary(soil_log2.aov)
 ```
-
-```{r}
-summary(soil_log3.aov)
-```
-
 
 # Tukey HSD test
 
@@ -337,27 +336,22 @@ tukey <- TukeyHSD(soil_log2.aov)
 ```
 
 ```{r}
-tukey2 <- TukeyHSD(soil_log3.aov)
-```
-
-```{r}
 tukey
 ```
-
-```{r}
-tukey2
-```
-
 
 # cld
 
 ```{r}
-cld <- multcompLetters4(soil_log3.aov, tukey2) 
+cld <- multcompLetters4(soil_log2.aov, tukey) 
 ```
 
 ```{r}
 cld
 ```
+```{r}
+cld$depth_cat
+```
+
 # Table
 
 ```{r}
@@ -412,12 +406,27 @@ soil_main
 # Graph original data first
 
 ```{r}
+x_labels = c("1", "2", "3", "4", "5", "6", "7", "8")
+```
+
+```{r}
+x_labels2 = c("0-11", "11-26", "26-38", "38-54", "54-67", "67-81", "81-96", "96-111")
+```
+
+```{r}
 soil_main.barplot <- ggplot(soil_main, aes(x = depth_cat, y = mean, fill = material)) +   
   geom_bar(stat = "identity", position = position_dodge(width = 0.9), width = 0.75, color = "#2b2b2b", linewidth = 0.50, alpha = 0.6) +
   geom_linerange(aes(ymin = mean, ymax = mean + se), position = position_dodge(width = 0.9), linewidth = 0.75) +
-  scale_x_discrete(expand = c(0, 1), labels = x_labels) + 
+  #geom_signif(comparisons = list(c("1", "1")), y_position = 9950,
+  #            tip_length = 0, vjust = 0.1) +
+  geom_signif(comparisons = list(c("2", "8")), y_position = 5250,
+              annotation = c("B"),
+              tip_length = 0, vjust = 0.1) +
+  #scale_y_discrete(expand = c(0, 8000), expression(paste("mbc"))) + 
+  scale_x_discrete(expand = c(0, 1), labels = x_labels2) + 
   ggtitle(expression(paste(italic(" Soil")))) +
   ylab(expression(paste("mbc"))) +
+  ylim(0, 10000) +
   labs(x = NULL) +
   theme(strip.text = element_text(size = 10, color = "black", hjust = 0.50),
         strip.background = element_rect(fill = "#FFFFFF", color = NA),    
@@ -447,7 +456,7 @@ soil_log_main <- read.csv('soil_main.csv') %>%
   as_tibble() %>%
   mutate_at(vars(material, depth_cat), factor) %>%
   group_by(material, depth_cat) %>%
-  dplyr::summarize(mean = log(mean(mbc)), 
+  dplyr::summarize(mean = mean(log(mbc)), 
                    sd = sd(log(mbc)), 
                    n = n(),
                    se = sd/sqrt(n)
@@ -467,9 +476,15 @@ soil_log_main
 soil_log_main.barplot <- ggplot(soil_log_main, aes(x = depth_cat, y = mean, fill = material)) +   
   geom_bar(stat = "identity", position = position_dodge(width = 0.9), width = 0.75, color = "#2b2b2b", linewidth = 0.50, alpha = 0.6) +
   geom_linerange(aes(ymin = mean, ymax = mean + se), position = position_dodge(width = 0.9), linewidth = 0.75) +
+  #geom_signif(comparisons = list(c("1", "1")), y_position = 9950,
+  #            tip_length = 0, vjust = 0.1) +
+  geom_signif(comparisons = list(c("2", "8")), y_position = 8.0,
+              annotation = c("B"),
+              tip_length = 0, vjust = 0.1) +
   scale_x_discrete(expand = c(0, 1), labels = x_labels) + 
   ggtitle(expression(paste(italic(" Soil")))) +
-  ylab(expression(paste("mbc"))) +
+  ylab(expression(paste("mbc (log-transformed)"))) +
+  ylim(0, 10) +
   labs(x = NULL) +
   theme(strip.text = element_text(size = 10, color = "black", hjust = 0.50),
         strip.background = element_rect(fill = "#FFFFFF", color = NA),    
@@ -491,7 +506,6 @@ soil_log_main.barplot <- ggplot(soil_log_main, aes(x = depth_cat, y = mean, fill
 ```{r}
 soil_log_main.barplot
 ```
-
 
 ```{r}
 ggplot(soil_full, aes(x = depth, y = log(mbc), color = material)) +
