--- a/content/app2.qmd
+++ b/content/app2.qmd
@@ -28,10 +28,6 @@ library(xtable)
 library(tidyr)
 library(ordinal)
 library(VGAM)
-#ibrary(rjags) ; load.module('glm') ; load.module('dic')    # need a separate working JAGS installation. 
-#The rjags package is just an interface to the JAGS library
-#Make sure you have installed JAGS-4.x.y.exe (for any x >=0, y>=0) from
-#http://www.sourceforge.net/projects/mcmc-jags/files
 library(mosaic)  
 library(arm)
 library(cowplot)
@@ -41,11 +37,175 @@ library(kableExtra)
 library(gt)
 require(MASS)
 require(tinytex)
+
+require(tidyverse)
+require(plyr)
+require(betareg)
+require(lmtest)
+require(glmmTMB)
+require(boot)
+require(emmeans)
+require(brms)
+require(mvtnorm)
+require(nlme)
+require(rstan)
+require(VGAM)
+require(car)
+require(lme4)
+require(Rmisc)
+require(readr)
+require(multcomp)
+require(ggthemes)
+require(multcompView)
+require(flextable)
 ```
 
-*From* **Damgaard & Irvine (2019)** Using the beta distribution to analyse plant cover data *Journal of Ecology. 107:2747-2759*
+### Colony Size
 
-Wrote a function to create a table from `betreg` object that can be used in `xtable()`
+```{r}
+poci_size <- read.csv('coral_size.csv')
+```
+
+```{r}
+poci_size.gg <- read_csv("poci_size_main.csv")
+```
+
+```{r}
+ggplot(poci_size.gg, aes(x = size_cm)) +
+  geom_histogram(fill = "#333399") + 
+  #below here is ylabel, xlabel, and main title
+  ylab("Frequency") +
+  xlab(NULL) +
+  ggtitle(expression("Coral size " (cm**2))) +
+  theme_bw() +
+  facet_wrap(~ Site, ncol = 1) +
+  #theme sets sizes, text, etc
+  theme(axis.title.x = element_text(size = 14), 
+        axis.title.y = element_text(size = 14), 
+        axis.text.y  = element_text(size= 10),
+        axis.text.x  = element_text(size = 12), 
+        legend.text = element_text(size = 12),
+        legend.title = element_text(size = 12),
+        plot.title = element_text(hjust = 0.5, size = 14),
+        # change plot background, grid lines, etc (just examples so you can see)
+        panel.background = element_rect(fill = "white"),
+        panel.grid.minor.y = element_blank(),
+        panel.grid.major = element_blank(),
+        plot.background = element_rect(fill = "white"),
+        legend.background = element_rect(fill = "white"),
+        strip.text.x = element_text(size = 12, colour = "#FFFFFF"),
+        strip.background = element_rect(fill = '#000066')
+  )
+```
+
+```{r}
+poci_size2 <-
+poci_size %>%
+  as_tibble() %>%
+  mutate(size_cm = area*10000) %>%
+  group_by(Site) %>%
+  dplyr::summarize(mean = mean(size_cm), 
+                   sd = sd(size_cm), 
+                   n = n(),
+                   se = sd/sqrt(n)
+  ) %>%
+  mutate(se = sd / sqrt(n),
+         lower.ci = mean - qt(1 - (0.05 / 2), n - 1) * se,
+         upper.ci = mean + qt(1 - (0.05 / 2), n - 1) * se) %>%
+  mutate_at(vars(Site), factor) %>%
+  add_column(
+          location = c('Anakena', 'Manavai', 'Southeast')
+          ) %>%
+  mutate_at(vars(location), factor)
+```
+
+```{r}
+poci_size2
+```
+
+```{r}
+poci_size.gg <-
+  poci_size %>%
+  mutate(size_cm = area*10000) %>%
+  as_tibble() %>%
+  mutate_at(vars(Site), factor)
+```
+
+```{r}
+poci_size.gg
+```
+
+```{r}
+model_1.lm <- lm(size_cm ~ Site, data = poci_size.gg)
+```
+
+```{r}
+model_1.lm
+```
+
+```{r}
+summary(model_1.lm)
+```
+
+```{r}
+par(mfrow = c(2, 2))
+plot(model_1.lm)
+```
+
+```{r}
+Anova(model_1.lm, type = "III")
+```
+
+```{r}
+model_1.aov <- Anova(model_1.lm, type = "III")
+```
+
+```{r}
+as.data.frame(model_1.aov)
+```
+
+```{r}
+flextable(model_1.aov)
+```
+
+```{r}
+post_hoc.model_1.lm <- glht(model_1.lm, linfct = mcp(Site = 'Tukey'))
+```
+
+```{r}
+model_1.aov <- aov(size_cm ~ Site, data = poci_size.gg)
+```
+
+```{r}
+# Tukey's test
+tukey <- TukeyHSD(model_1.aov)
+```
+
+```{r}
+# compact letter display
+cld <- multcompLetters4(model_1.aov, tukey)
+```
+
+```{r}
+cld
+```
+
+```{r}
+poci_size3 <- 
+poci_size2 %>%
+  add_column(
+          cld = c('a', 'b', 'c')
+          ) %>%
+mutate_at(vars(cld), factor)
+```
+
+```{r}
+poci_size3
+```
+
+### Percent Cover
+
+*From* **Damgaard & Irvine (2019)** Using the beta distribution to analyse plant cover data *Journal of Ecology. 107:2747-2759*
 
 ```{r, include = TRUE}
 p_cover = read_csv('rpn_percent_cover.csv') %>% 
@@ -111,11 +271,9 @@ p_cover.mean
 
 One option for dealing with the 0 and 1 values is to transform them to be slightly less than one or more than zero. This approach assumes that the data are consistent with a common beta distribution. We fit five models to the data: three variations on the beta model and two linear model approaches.
 
-A beta regression assuming a common spatial aggregation $\delta$ or precision parameter ($\phi$) (object named: mod.beta1). Notice that $\delta= \frac{1}{1+\phi}$ and $\phi=\frac{(1-\delta)}{\delta}$. A beta regression assuming each year had a different $\phi$ parameter (object named: mod.beta2).
+A beta regression assuming a common spatial aggregation $\delta$ or precision parameter ($\phi$) (object named: mod.beta1). Notice that $\delta= \frac{1}{1+\phi}$ and $\phi=\frac{(1-\delta)}{\delta}$. A beta regression assuming each reef location had a different $\phi$ parameter.
 
-Another option for modeling the data is to use a zero-one augmented beta model. Currently, the betareg package does not implement this model directly. Therefore, we follow the theoretical results shown in Ospina and Ferrari (2010) that suggest a three-part model can be fit to the data. Basically, we use logistic regression with response an indicator variable for whether or not the plot had zero recorded cover, another logistic regression with response an indicator for whether or not the plot had 100$\%$ recorded percent cover, and then the beta regression is used to model the continuous percent cover observations ranging from greater than 0 and less than 1.
-
-Other options based on assuming that the residuals are normally distributed is to use a linear model with a logit-transformed response (object named: mod.lmlogit) or a linear model with response untransformed proportions (object named: mod.lmraw).
+Other options based on assuming that the residuals are normally distributed is to use a linear model with a logit-transformed response or a linear model with response untransformed proportions.
 
 For comparison this applies a logit-transformation to the empirical proportions and then uses a standard linear regression model.
 
@@ -215,14 +373,3 @@ p_cover_mod.beta1_aic
 p_cover_mod.beta2_aic
 ```
 
-## Interpreting results for pocilloporid corals
-
-In order to choose between the beta regression model with a common $\phi$ versus different $\phi$, I used **AIC** but a *likelihood ratio* or *wald test* could be used. Using **AIC**, the model with varying $\phi$ values had a lower AIC (-1518.568 compared to -1494.524) and therefore more support. We interpret the output from beta regression with the following:
-
-The model we fit assumes $$logit(\mu_j)=\beta_0+\beta_1 Ind_{grp2},$$ where $Ind_{grp2}$ is an indicator for group 2 and $j$ denotes the group membership so $j=1$ or $j=2$. We have $logit(\mu_2)-logit(\mu_1)=\beta_1$, which is equivalent to $$log(\frac{\mu_2}{1-\mu_2})-log(\frac{\mu_1}{1-\mu_1})= \beta_1.$$
-
-The $\frac{\mu_j}{1-\mu_j}$ is interpreted as the odds of proportion cover in group $j$. Therefore,
-
-$$log(\frac{\mu_2}{1-\mu_2}/\frac{\mu_1}{1-\mu_1})=\beta_1$$ is the log- odds ratio of cover in group 2 compared to group 1, $$(\frac{\mu_2}{1-\mu_2}/\frac{\mu_1}{1-\mu_1})=exp(\beta_1).$$
-
-Then $exp(\beta_1)$ is the factor increase/decrease in odds of proportion cover for group 2 compared to group 1, where $exp(\beta_1)>1$ is an increase and $exp(\beta_1)<1$ is a decrease, and $exp(\beta_1) \approx 1$ means essentially no change.
